minor scale flicker while zoom solved

--- a/dev/src/pdf/components/pdf.css
+++ b/dev/src/pdf/components/pdf.css
@@ -20,6 +20,7 @@
 }
 
 .pdf-react-pdf-page {
+  visibility: hidden !important;
   background-color: transparent !important;
   position: relative;
   z-index: 11;
@@ -31,9 +32,11 @@
   top: 0px;
   left: 0px;
   z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .pdf-cached-image{
-  object-fit: cover;
 }
 
 
